added function to each <td> element

--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
         <table class="tb" align="center">
             <caption>Game</caption>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>              
+                <td onclick="clicked(1)" id="1"></td>
+                <td onclick="clicked(2)" id="2"></td>
+                <td onclick="clicked(3)" id="3"></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>              
+                <td onclick="clicked(4)" id="4"></td>
+                <td onclick="clicked(5)" id="5"></td>
+                <td onclick="clicked(6)" id="6"></td>
+            
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>              
+                <td onclick="clicked(7)" id="7"></td>
+                <td onclick="clicked(8)" id="8"></td>
+                <td onclick="clicked(9)" id="9"></td>            
             </tr>
 
          </table>
-    
+    <script src="tictactoe.js"></script>
 </body>
 </html>
