added color to diiferentiate players

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             </tr>
 
          </table>
+         <div id="turn_indicator" style="text-align: center;margin-top: 2%;">
+            player 1 turn
+         </div>
     <script src="tictactoe.js"></script>
 </body>
 </html>
