--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
          </table>
          <div id="turn_indicator" style="text-align: center;margin-top: 2%;">
-            red turn
+            red's turn
          </div>
-    <script src="tictactoe.js"></script>
-</body>
-</html>
+    <script src="tictactoe.js"></script> 
+</body>  
+</html>  
