--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <table class="tb" align="center">
-            <caption>Game</caption>
+            <caption>Tic Tac Toe</caption>
             <tr>
                 <td onclick="clicked(1)" id="1">1</td>
                 <td onclick="clicked(2)" id="2">2</td>
