--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
         <table class="tb" align="center">
             <caption>Tic Tac Toe</caption>
             <tr>
-                <td onclick="clicked(1)" id="1">1</td>
-                <td onclick="clicked(2)" id="2">2</td>
-                <td onclick="clicked(3)" id="3">3</td>
+                <td onclick="clicked(1)" id="1"></td>
+                <td onclick="clicked(2)" id="2"></td>
+                <td onclick="clicked(3)" id="3"></td>
             </tr>
             <tr>
-                <td onclick="clicked(4)" id="4">4</td>
-                <td onclick="clicked(5)" id="5">5</td>
-                <td onclick="clicked(6)" id="6">6</td>
+                <td onclick="clicked(4)" id="4"></td>
+                <td onclick="clicked(5)" id="5"></td>
+                <td onclick="clicked(6)" id="6"></td>
             
             </tr>
             <tr>
-                <td onclick="clicked(7)" id="7">7</td>
-                <td onclick="clicked(8)" id="8">8</td>
-                <td onclick="clicked(9)" id="9">9</td>            
+                <td onclick="clicked(7)" id="7"></td>
+                <td onclick="clicked(8)" id="8"></td>
+                <td onclick="clicked(9)" id="9"></td>            
             </tr>
 
          </table>
